--- a/CircuitBreakerPattern/pom.xml
+++ b/CircuitBreakerPattern/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>CircuitBreakerPattern</artifactId>
+    <artifactId>circuit.breaker.pattern</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
