--- a/SidecarPattern/pom.xml
+++ b/SidecarPattern/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.java.design.patterns</groupId>
-    <artifactId>sidecar-pattern-demo</artifactId>
+    <artifactId>sidecar.pattern</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
