Update Maven POM files to use Java 21 and add module structure for practice-java-with-kafka

--- a/SidecarPattern/pom.xml
+++ b/SidecarPattern/pom.xml
@@ -12,27 +12,19 @@
     <name>Sidecar Pattern Demo</name>
     <description>A simple demonstration of the sidecar pattern in Java</description>
 
+    <parent>
+        <groupId>com.java.design.patterns</groupId>
+        <artifactId>practice-java-design-patterns</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <logback.version>1.4.11</logback.version>
-        <slf4j.version>2.0.9</slf4j.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
     <dependencies>
-        <!-- Logging -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-
         <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
