--- a/practice-java-with-kafka/pom.xml
+++ b/practice-java-with-kafka/pom.xml
@@ -10,6 +10,10 @@
     </parent>
 
     <artifactId>practice-java-with-kafka</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>kafka-basic</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
