--- a/practice-java-with-kafka/kafka-producer-wikimedia/pom.xml
+++ b/practice-java-with-kafka/kafka-producer-wikimedia/pom.xml
@@ -5,16 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.java.design.patterns</groupId>
-        <artifactId>practice-java-design-patterns</artifactId>
+        <artifactId>practice-java-with-kafka</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>practice-java-with-kafka</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>kafka-basic</module>
-        <module>kafka-producer-wikimedia</module>
-    </modules>
+    <artifactId>kafka-producer-wikimedia</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -23,13 +18,18 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>3.7.1</version>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.launchdarkly/okhttp-eventsource -->
+        <dependency>
+            <groupId>com.launchdarkly</groupId>
+            <artifactId>okhttp-eventsource</artifactId>
+            <version>2.5.0</version>
         </dependency>
     </dependencies>
-
 
 </project>
