Add kafka-connect-arch-type module with initial Maven and README setup

--- a/practice-java-with-kafka/pom.xml
+++ b/practice-java-with-kafka/pom.xml
@@ -17,6 +17,7 @@
         <module>kafka-consumer-open_search</module>
         <module>kafka-stream-wikimedia</module>
         <module>kafka-connect-basic</module>
+        <module>kafka-connect-arch-type</module>
     </modules>
 
     <properties>
