--- a/practice-java-with-kafka/kafka-producer-wikimedia/pom.xml
+++ b/practice-java-with-kafka/kafka-producer-wikimedia/pom.xml
@@ -30,6 +30,18 @@
             <artifactId>okhttp-eventsource</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
